# bluemind-ce-migration

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
static/: etat_systeme.json
utils/: alert_users.py  coloration.py  create_user.py  generate_passwords.py  get_mails.py  menu.py  parameters.py  ssh_connexion.py  system_state.py
